@@ -6,6 +6,7 @@
 
 class vfs;
 class vfile;
+class KrViewProperties;
 
 class KrVfsModel: public QAbstractListModel {
 	Q_OBJECT
@@ -21,10 +22,12 @@ public:
 	int columnCount(const QModelIndex &parent = QModelIndex()) const;
 	QVariant data(const QModelIndex &index, int role) const;
 	QVariant headerData(int section, Qt::Orientation orientation, int role = Qt::DisplayRole) const;
+	void setProperties( KrViewProperties * props ) { _properties = props; }
 
 	
 protected:
 	vfs *_vfs;
 	QVector<vfile*> _vfiles;
+	KrViewProperties * _properties;
 };
 #endif // __krvfsmodel__
