@@ -22,6 +22,7 @@
     FIXED: Krusader fails to edit files containing international chars with Shift+F4
 
   CHANGED: Initial Konfigurator size is now 900x680
+     ARCH: view properties for detailed/brief/interviews are merged into one
      
      I18N: Updated French translation (thanks to Henry-Nicolas Tourneur and Stanislas Zeller)
      I18N: Updated Catalan translation (thanks to Joaquim Perez)
